--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 
     <link rel="stylesheet" href="../resources/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
 </head>
 <body>
 
