--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
 
     <link rel="stylesheet" href="../resources/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
+    <style type="text/css">
+        #bubble {
+            filter: blur(8px);
+        }
+    </style>
 </head>
 <body>
 
